--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -10,12 +10,82 @@ concurrency:
   group: "workflow = ${{ github.workflow }}, ref = ${{ github.event.workflow_run.head_branch || github.event.ref || github.ref }}"
   cancel-in-progress: false
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
+  calculate-refs:
+    runs-on: ubuntu-latest
+    outputs:
+      ref: ${{ steps.calculate_branch.outputs.ref}}
+      branch: ${{ steps.calculate_branch.outputs.branch}}
+    steps:
+      - name: Calculate Branch (workflow_run event)
+        id: calculate_branch
+        if: github.event_name == 'workflow_run'
+        run: |
+          echo "ref=${{ github.event.workflow_run.head_commit.id }}" >> $GITHUB_OUTPUT
+          echo "branch=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_OUTPUT
+
+      - name: Calculate Branch (workflow_dispatch event)
+        id: calculate_branch
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "ref=${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "branch=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+
+      - name: Calculate Branch (schedule event)
+        id: calculate_branch
+        if: github.event_name == 'schedule'
+        run: |
+          echo "ref=${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "branch=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+
+  check-commit-count:
+    needs: calculate-refs
+    runs-on: ubuntu-latest
+    steps:
+      # - name: Calculate Branch (workflow_run event)
+      #   if: github.event_name == 'workflow_run'
+      #   run: |
+      #     echo "REF=${{ github.event.workflow_run.head_commit.id }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_ENV
+
+      # - name: Calculate Branch (workflow_dispatch event)
+      #   if: github.event_name == 'workflow_dispatch'
+      #   run: |
+      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+
+      # - name: Calculate Branch (schedule event)
+      #   if: github.event_name == 'schedule'
+      #   run: |
+      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ needs.calculate-refs.outputs.branch }}
+
+      - name: Check whether workflow should run (scheduled)
+        continue-on-error: true
+        if: github.event_name == 'schedule'
+        run: |
+          if [[ $(git log --oneline --since '24 hours ago' | wc -l) -gt 0 ]]; then
+            echo "SHOULD_RUN=true" >> $GITHUB_ENV
+          else
+            echo "SHOULD_RUN=false" >> $GITHUB_ENV
+          fi
+
+      - name: Check whether workflow should run (non-scheduled)
+        if: github.event_name != 'schedule'
+        run: echo "SHOULD_RUN=true" >> $GITHUB_ENV
+
   build-jvm-image:
+    needs: check-commit-count
     if: (github.repository == 'edeandrea/ci-test') && (contains(fromJSON('["workflow_dispatch", "schedule"]'), github.event_name) || ((github.event_name == 'worflow_run') && ((github.event.workflow_run.event == 'push') || (github.event.workflow_run.event == 'workflow_dispatch') && (github.event.workflow_run.conclusion == 'success') && (github.event.workflow_run.head_branch == 'main'))))
-    defaults:
-      run:
-        shell: bash
     runs-on: ubuntu-latest
     steps:
       - name: Print Github context
@@ -23,23 +93,26 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github)}}
         run: echo $GITHUB_CONTEXT
 
-      - name: Calculate Branch (workflow_run event)
-        if: github.event_name == 'workflow_run'
-        run: |
-          echo "REF=${{ github.event.workflow_run.head_commit.id }}" >> $GITHUB_ENV
-          echo "BRANCH=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_ENV
+      - name: Print shouldRun
+        run: echo "SHOULD_RUN = ${{ env.SHOULD_RUN }}"
 
-      - name: Calculate Branch (workflow_dispatch event)
-        if: github.event_name == 'workflow_dispatch'
-        run: |
-          echo "REF=${{ github.sha }}" >> $GITHUB_ENV
-          echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+      # - name: Calculate Branch (workflow_run event)
+      #   if: github.event_name == 'workflow_run'
+      #   run: |
+      #     echo "REF=${{ github.event.workflow_run.head_commit.id }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_ENV
 
-      - name: Calculate Branch (schedule event)
-        if: github.event_name == 'schedule'
-        run: |
-          echo "REF=${{ github.sha }}" >> $GITHUB_ENV
-          echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+      # - name: Calculate Branch (workflow_dispatch event)
+      #   if: github.event_name == 'workflow_dispatch'
+      #   run: |
+      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
+
+      # - name: Calculate Branch (schedule event)
+      #   if: github.event_name == 'schedule'
+      #   run: |
+      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
+      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Print vars
         run: |
