--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -38,43 +38,27 @@ jobs:
   check-commit-count:
     needs: calculate-refs
     runs-on: ubuntu-latest
+    outputs:
+      has_commits: ${{ steps.calculate_commits.outputs.has_commits}}
     steps:
-      # - name: Calculate Branch (workflow_run event)
-      #   if: github.event_name == 'workflow_run'
-      #   run: |
-      #     echo "REF=${{ github.event.workflow_run.head_commit.id }}" >> $GITHUB_ENV
-      #     echo "BRANCH=${{ github.event.workflow_run.head_branch }}" >> $GITHUB_ENV
-
-      # - name: Calculate Branch (workflow_dispatch event)
-      #   if: github.event_name == 'workflow_dispatch'
-      #   run: |
-      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
-      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
-
-      # - name: Calculate Branch (schedule event)
-      #   if: github.event_name == 'schedule'
-      #   run: |
-      #     echo "REF=${{ github.sha }}" >> $GITHUB_ENV
-      #     echo "BRANCH=${{ github.ref_name }}" >> $GITHUB_ENV
-
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: ${{ needs.calculate-refs.outputs.branch }}
 
-      - name: Check whether workflow should run (scheduled)
+      - name: Check whether workflow should run
+        id: calculate_commits
         continue-on-error: true
-        if: github.event_name == 'schedule'
         run: |
-          if [[ $(git log --oneline --since '24 hours ago' | wc -l) -gt 0 ]]; then
-            echo "SHOULD_RUN=true" >> $GITHUB_ENV
+          if [[ ${{ github.event_name }} == 'schedule']]; then
+            if [[ $(git log --oneline --since '24 hours ago' | wc -l) -gt 0 ]]; then
+              echo "SHOULD_RUN=true" >> $GITHUB_OUTPUT
+            else
+              echo "SHOULD_RUN=false" >> $GITHUB_OUTPUT
+            fi
           else
-            echo "SHOULD_RUN=false" >> $GITHUB_ENV
+            echo "SHOULD_RUN=true" >> $GITHUB_OUTPUT
           fi
-
-      - name: Check whether workflow should run (non-scheduled)
-        if: github.event_name != 'schedule'
-        run: echo "SHOULD_RUN=true" >> $GITHUB_ENV
 
   build-jvm-image:
     needs: check-commit-count
@@ -87,7 +71,7 @@ jobs:
         run: echo $GITHUB_CONTEXT
 
       - name: Print shouldRun
-        run: echo "SHOULD_RUN = ${{ env.SHOULD_RUN }}"
+        run: echo "SHOULD_RUN = ${{ needs.check-commit-count.outputs.has_commits }}"
 
       # - name: Calculate Branch (workflow_run event)
       #   if: github.event_name == 'workflow_run'
