--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -50,10 +50,13 @@ jobs:
         id: calculate_commits
         run: |
           if [[ ${{ github.event_name }} == 'schedule' && $(git log --oneline --since '24 hours ago' | wc -l) -gt 0 ]]; then
-            echo "SHOULD_RUN=true" >> $GITHUB_OUTPUT
+            echo "has_commits=true" >> $GITHUB_OUTPUT
           else
-            echo "SHOULD_RUN=true" >> $GITHUB_OUTPUT
+            echo "has_commits=true" >> $GITHUB_OUTPUT
           fi
+
+      - name: Print has_commits
+        run: echo "has_commits = ${{ steps.calculate_commits.outputs.has_commits }}"
 
   build-jvm-image:
     needs: check-commit-count
@@ -64,9 +67,6 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github)}}
         run: echo $GITHUB_CONTEXT
-
-      - name: Print shouldRun
-        run: echo "SHOULD_RUN = ${{ needs.check-commit-count.outputs.has_commits }}"
 
       - name: Print vars
         run: |
