--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -2,9 +2,9 @@ name: CI schedule test
 
 on:
   workflow_dispatch:
-  schedule:
-    # - cron: "0 0 * * MON-FRI"
-    - cron: "* * * * *"
+  # schedule:
+  #   # - cron: "0 0 * * MON-FRI"
+  #   - cron: "* * * * *"
 
 concurrency:
   group: "workflow = ${{ github.workflow }}, ref = ${{ github.event.workflow_run.head_branch || github.event.ref || github.ref }}"
