--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,13 +1,13 @@
 name: CI schedule test
 
 env:
-  TIMEFRAME: "24 hours"
+  DEFAULT_TIMEFRAME: "24 hours"
 
 on:
   workflow_dispatch:
-  schedule:
+  # schedule:
   #   # - cron: "0 0 * * *"
-    - cron: "* * * * *"
+  #   - cron: "* * * * *"
 
 concurrency:
   group: "workflow = ${{ github.workflow }}, ref = ${{ github.event.workflow_run.head_branch || github.event.ref || github.ref }}"
@@ -53,14 +53,14 @@ jobs:
 
       - name: Print commits
         run: |
-          git log --oneline --since '${{ env.TIMEFRAME }} ago'
-          echo "Num commits = $(git log --oneline --since '${{ env.TIMEFRAME }} ago' | wc -l)"
+          git log --oneline --since '${{ env.DEFAULT_TIMEFRAME }} ago'
+          echo "Num commits = $(git log --oneline --since '${{ env.DEFAULT_TIMEFRAME }} ago' | wc -l)"
 
       - name: Check whether workflow should run
         id: calculate_commits
         run: |
           if [[ ${{ github.event_name }} == 'schedule' ]]; then
-            if [[ $(git log --oneline --since '${{ env.TIMEFRAME }} ago' | wc -l) -gt 0 ]]; then
+            if [[ $(git log --oneline --since '${{ env.DEFAULT_TIMEFRAME }} ago' | wc -l) -gt 0 ]]; then
               echo "has_commits=true" >> $GITHUB_OUTPUT
             else
               echo "has_commits=false" >> $GITHUB_OUTPUT
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ needs.calculate-refs.outputs.branch }}
+          ref: ${{ needs.check-commit-count.outputs.branch }}
           
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -93,7 +93,7 @@ jobs:
       - name: Calculate projects
         id: calculate_projects
         run: |
-          json=$(curl -Ls https://sh.jbang.dev | bash -s - .github/calculateModules.java)
+          json=$(curl -Ls https://sh.jbang.dev | bash -s - .github/calculateModules.java ${{ env.DEFAULT_TIMEFRAME }})
           echo "${json}"
           echo "projects_matrix=${json}" >> $GITHUB_OUTPUT
 
